Adjusting anchor/search overlap bug

--- a/css/main-2019.scss
+++ b/css/main-2019.scss
@@ -584,7 +584,7 @@ h3 {
   }
   li {
     min-width: 100%;
-    padding: 2rem 1rem 0 1rem;
+    padding: 0 1rem;
     margin: 2rem 0 0 0;
     list-style: none;
     text-align: left;
@@ -597,6 +597,7 @@ h3 {
   }
   h3 {
     display: inline-block;
+    padding: 3rem 0 0 0;
     margin: 0;
     font-size: $font-size-med;
     line-height: 1;
